--- a/config.toml
+++ b/config.toml
@@ -5,4 +5,5 @@ title = "[card10] logix"
 enableGitInfo = true
 
 [params]
-wiki_url = "https://chaos.expert/genofire/logix"
+wiki_url = "https://gitlab.hamburg.ccc.de/genofire/logix"
+wiki_branch = "hugo"
