--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-
 image: monachus/hugo
 
 variables:
@@ -6,6 +5,8 @@ variables:
 
 pages:
   script:
+  - git submodule sync --recursive
+  - git submodule update --init --recursive
   - hugo
   artifacts:
     paths:
