--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "content"]
 	path = content
-	url = https://gitlab.hamburg.ccc.de/genofire/logix.git
+	url = https://git.card10.badge.events.ccc.de/open/logix.git
