Fix switching to latest repo

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,9 @@ variables:
 pages:
   script:
   - git submodule sync --recursive
+  - popd content
   - git submodule update --init --recursive --remote --merge
+  - pushd
   - hugo
   artifacts:
     paths:
