--- a/config.toml
+++ b/config.toml
@@ -5,5 +5,4 @@ title = "[card10] logix"
 enableGitInfo = true
 
 [params]
-wiki_url = "https://gitlab.hamburg.ccc.de/genofire/logix"
-wiki_branch = "hugo"
+wiki_url = "https://git.card10.badge.events.ccc.de/open/logix"
