--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: monachus/hugo
 
 pages:
   script:
-  - git submodule update --init --remote
+  - git submodule foreach git pull origin master
   - hugo
   artifacts:
     paths:
