--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,15 @@ build-pages:
     entrypoint: [""]
   variables:
     GIT_STRATEGY: none
-    GIT_URL: https://git.card10.badge.events.ccc.de/card10/logix
+    GIT_URL: https://git.card10.badge.events.ccc.de/card10/logix.git/
   artifacts:
    paths:
     - hash
    name: latest
+  only:
+   variables:
+    - $TRIGGER == "automatic"
+  allow_failure: true
   script:
    - git ls-remote "${GIT_URL}" | awk '{ if( $2 == "refs/heads/master" ) { print $1; exit }}' | tee new_hash
    - if [ "$(cat new_hash)" == "$(cat hash)" ]; then echo "No need for update"; exit 1; fi
