make external assets/fonts broken

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,8 @@ pages:
   - pushd content
   - git status
   - popd
+  - yarn add sass
+  - ./node_modules/.bin/sass style/main.scss static/css/main.css
   - hugo
   artifacts:
     paths:
