--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://git.card10.badge.events.ccc.de/card10/logix.git
 [submodule "style/vanillaframework"]
 	path = style/vanillaframework
-	url = git@github.com:vanilla-framework/vanilla-framework.git
+	url = https://github.com/vanilla-framework/vanilla-framework.git
