Revert "Switch to image containing yarn"
This reverts commit f264d822080383c6794dec42c0241a9ab59f8357.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,5 @@
 .pages: &pages
-  image:
-    name: klakegg/hugo:ext-nodejs
-    entrypoint: [""]
+  image: monachus/hugo
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   script:
