--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,8 @@
     GIT_SUBMODULE_STRATEGY: recursive
   script:
      - git status
-     - pushd content
-     - git pull origin master
-     - git status
-     - popd
+     - rm -rf content
+     - git clone https://git.card10.badge.events.ccc.de/card10/logix.git content
      - hugo
   artifacts:
     paths:
