--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,9 @@
 .pages: &pages
   image: monachus/hugo
   variables:
-    GIT_SUBMODULE_STRATEGY: recursive
+    GIT_SUBMODULE_STRATEGY: none
+    GIT_DEPTH: 1
+    GIT_CLONE_PATH: /cache
   script:
      - git status
      - rm -rf content
